# smart-contract-with-ink

./: README.md
greetings/: Cargo.toml  lib.rs
greetings/greetings/ui/: index.html
greetings/greetings/ui/scripts/: script.js
greetings/greetings/ui/styles/: styles.css
