[package]
name = "greeting_chat"
version = "0.1.0"
authors = ["Armielyn Obinguar <aemyobinguar@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
